--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,13 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
-  transition: all 0.15s linear;
   border-radius: 4px;
+  -webkit-user-drag: none;
+  transition: all 0.15s linear;
   outline: 2px solid #00000000;
+  -webkit-tap-highlight-color: transparent;
 }
 *:focus {
-  outline: 2px solid rgba(0, 0, 0, 0.5);
+  outline: 2px solid #00000000;
+}
+html {
+  scroll-behavior: smooth;
+  font-family: 'Roboto';
 }
 svg {
   vertical-align: middle;
+}
+header {
+  position: fixed;
+  left: 50%;
+  top: 4px;
+  padding: 4px;
+  max-height: 32px;
+  border-radius: 64px;
+  background: #6b6b6b85;
+}
+hr {
+  margin: 32px;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4);
 }
 a {
   font-size: 18px;
@@ -15,24 +36,69 @@ a {
   text-align: center;
   color: #0909e0;
   width: 80px;
-  padding: 2px 12px;
+  padding: 3px 8px;
   text-decoration-line: none;
   margin: 12px 6px;
   text-align: center;
-  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 1px 4px rgba(54, 54, 245, 0.25);
+  text-transform: uppercase;
 }
 a:hover,
 a:focus {
-  background: #00000010;
-  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+  background: rgba(33, 15, 199, 0.1);
+  box-shadow: 1px 1px 4px rgba(54, 54, 245, 0.5);
 }
 a:active {
-  background: #00000025;
+  background: rgba(33, 15, 199, 0.4);
 }
 #links {
   li {
-    margin: 16px 0 16px;
+    margin: 20px 0;
     font-size: 18px;
     color: #000;
+  }
+}
+.debug {
+  position: fixed;
+  bottom: 8px;
+  left: 8x;
+  pointer-events: none;
+  user-select: none;
+  font-size: 12px;
+  border-radius: 24px;
+  opacity: 75%;
+  padding: 6px;
+  color: white;
+  border: solid 2px #030524;
+  background: #000000f6;
+}
+
+@media only screen and (max-width: 479px) {
+  .warn:not(.confirmed) {
+    display: block !important;
+  }
+}
+@media only screen and (max-height: 319px) {
+  .warn:not(.confirmed) {
+    display: block !important;
+  }
+}
+
+.warn {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 80%;
+  transform: translate(-50%, -50%);
+  padding: 32px 12px;
+  border-radius: 16px;
+  background-color: #fff;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+  button.warn-button {
+    display: flex;
+    margin-left: auto;
+    border: 1px solid #4c00ff;
+    border-radius: 0;
   }
 }
