--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -73,7 +73,7 @@ a:active {
   background: #000000f6;
 }
 
-@media only screen and (max-width: 479px) {
+@media only screen and (max-width: 519px) {
   .warn:not(.confirmed) {
     display: block !important;
   }
@@ -95,10 +95,26 @@ a:active {
   border-radius: 16px;
   background-color: #fff;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+  div.warn-bg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #00000013;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    z-index: 9998;
+  }
   button.warn-button {
     display: flex;
     margin-left: auto;
     border: 1px solid #4c00ff;
     border-radius: 0;
   }
+}
+li.links-hp {
+  margin-bottom: 24px;
 }
