--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -58,7 +58,7 @@ a:active {
     color: #000;
   }
 }
-.debug {
+.size {
   position: fixed;
   bottom: 8px;
   left: 8x;
@@ -71,50 +71,4 @@ a:active {
   color: white;
   border: solid 2px #030524;
   background: #000000f6;
-}
-
-@media only screen and (max-width: 519px) {
-  .warn:not(.confirmed) {
-    display: block !important;
-  }
-}
-@media only screen and (max-height: 319px) {
-  .warn:not(.confirmed) {
-    display: block !important;
-  }
-}
-
-.warn {
-  display: none;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 80%;
-  transform: translate(-50%, -50%);
-  padding: 32px 12px;
-  border-radius: 16px;
-  background-color: #fff;
-  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
-  z-index: 9999;
-  div.warn-bg {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #00000013;
-    width: 100%;
-    height: 100%;
-    max-width: 100%;
-    max-height: 100%;
-    z-index: 9998;
-  }
-  button.warn-button {
-    display: flex;
-    margin-left: auto;
-    border: 1px solid #4c00ff;
-    border-radius: 0;
-  }
-}
-li.links-hp {
-  margin-bottom: 24px;
 }
