--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -21,6 +21,7 @@ header {
   position: fixed;
   left: 50%;
   top: 4px;
+  transform: translate(-50%);
   padding: 4px;
   max-height: 32px;
   border-radius: 64px;
@@ -71,4 +72,10 @@ a:active {
   color: white;
   border: solid 2px #030524;
   background: #000000f6;
+}
+footer {
+  margin-top: 64px;
+  width: 100%;
+  text-align: center;
+  padding: 0;
 }
